# ncrtxt

./: IFLOW.md  README.md  pyproject.toml
dev/: up-version.py
ncrtxt/: __init__.py  cli.py  converter.py
src/ncrtxt49/: __init__.py  cli.py  converter.py
