[project]
name = "ncrtxt"
version = "2025.11.26.202922"
description = "转换数字字符引用文件 - 将HTML数字字符引用转换为对应的Unicode字符"
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
ncrtxt = "ncrtxt.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ncrtxt"]

[dependency-groups]
dev = [
    "hatchling>=1.27.0"
]
